# MiniTournamentApi

./: Dockerfile  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3c25fe5f8026_delete_user.py  64e98fed2325_initial_revision.py  d8139f00613a_added_name_to.py
app/: config.py  db.py  exceptions.py
app/api/: __init__.py  tournament.py
app/models/: __init__.py  tournament.py
app/schemas/: tournament.py  user.py
app/services/: tournament.py
test/: test_registration.py
